src/app/components/base/content-container/content-container.component.css
.content {
  display: flex;

  height: 100%;

  flex-direction: column;
  flex-grow: 1;

  padding-top: calc(64px + 12px);
  padding-left: 6rem;
  padding-right: 6rem;

  gap: 2rem;
}

@media (max-width: 1200px) {
  .content {
    padding-left: 4rem;
    padding-right: 3rem;
  }
}

@media (max-width: 840px) {
  .content {
    padding-left: 3rem;
    padding-right: 2rem;
  }
}

@media (max-width: 640px) {
  .content {
    padding-left: 2rem;
    padding-right: 1rem;
  }
}

@media (max-width: 440px) {
  .content {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

